# rustai-os

./: Cargo.toml  LICENSE  README.md  Rustwhitnighlybooteable.yml
.github/workflows/: Rustwhitnighlybooteable.yml
rustai-os/: .gitignore  Cargo.toml  LICENSE  README.md
rustai-os/professional-rust-project/: Cargo.toml
rustai-os/professional-rust-project/src/ai/: autograd.rs  mod.rs  ops.rs  tensor.rs
rustai-os/professional-rust-project/src/api/: handlers.rs
rustai-os/professional-rust-project/src/network/: mod.rs
src/: allocator.rs  gdt.rs  main.rs
src/ai/: inference.rs  mod.rs  nn.rs  tensor.rs
src/api/: http.rs  mod.rs  rest.rs  websocket.rs
src/interrupts/: exceptions.rs  mod.rs  pic.rs
src/memory/: frame_allocator.rs  heap_allocator.rs  mod.rs  paging.rs
src/network/: ethernet.rs  mod.rs  protocols.rs  tcp.rs
tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
