[package]
name = "rustai-os"
version = "0.1.0"
edition = "2021"
authors = ["Andy <tu.oefjbv3rv_@outlook.es>"]
description = "Sistema operativo especializado en Inteligencia Artificial escrito en Rust"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.9.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

# Dependencias específicas para IA
bevy = { version = "0.13.2", default-features = false, features = ["bevy_render"] }
half = { version = "2.2.1", default-features = false }

[dependencies.crossbeam-queue]
version = "0.3.8"
default-features = false
features = ["alloc"]

[dev-dependencies]
array-init = "2.1.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"  # Cambia de "abort" a "unwind"
lto = true
codegen-units = 1
opt-level = 3
